--- a/src/app/pokemon/pokemon-list/pokemon-list.component.scss
+++ b/src/app/pokemon/pokemon-list/pokemon-list.component.scss
@@ -6,8 +6,11 @@
 }
 
 .text--fallback {
-  color: #95add3;
-  font-size: 1rem;
+  color: #a5bde3;
+  font-size: 1.25rem;
   line-height: 1.25rem;
+  font-weight: 400;
+  margin-top: 10rem;
   text-align: center;
+  letter-spacing: 0.05rem;
 }
